# cambai-gemma-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  examples.sh  setup.sh
assets/: index.html
docs/: index.html
src/: asr.rs  gemma.rs  main.rs  platform.rs  ui.rs
static/: index.html  styles.css
